--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -3,5 +3,5 @@
     "python.linting.flake8Enabled": true,
     "python.linting.enabled": true,
     "python.formatting.provider": "black",
-    "python.pythonPath": "C:\\Users\\동211_로봇SI-01\\AppData\\Local\\Programs\\Python\\Python38\\python.exe"
+    "python.pythonPath": "/bin/python3",
 }
