--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -3,5 +3,5 @@
   "python.linting.flake8Enabled": false,
   "python.linting.enabled": true,
   "python.formatting.provider": "autopep8",
-  "python.pythonPath": "/usr/bin/python3"
+  "python.pythonPath": "C:\\ProgramData\\Anaconda3\\python.exe"
 }
