--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,7 +1,8 @@
 {
-  "python.linting.pylintEnabled": true,
-  "python.linting.flake8Enabled": false,
+  "python.linting.pylintEnabled": false,
+  "python.linting.flake8Enabled": true,
   "python.linting.enabled": true,
   "python.formatting.provider": "autopep8",
-  "python.pythonPath": "C:\\ProgramData\\Anaconda3\\python.exe"
+  "python.pythonPath": "C:\\ProgramData\\Anaconda3\\python.exe",
+  "python.linting.banditEnabled": false
 }
