--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -2,7 +2,7 @@
   "python.linting.pylintEnabled": false,
   "python.linting.flake8Enabled": true,
   "python.linting.enabled": true,
-  "python.formatting.provider": "autopep8",
+  "python.formatting.provider": "black",
   "python.pythonPath": "C:\\ProgramData\\Anaconda3\\python.exe",
   "python.linting.banditEnabled": false
 }
