--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,8 +1,5 @@
 {
-  "python.linting.pylintEnabled": false,
   "python.linting.flake8Enabled": true,
   "python.linting.enabled": true,
-  "python.formatting.provider": "black",
-  "python.pythonPath": "C:\\ProgramData\\Anaconda3\\python.exe",
-  "python.linting.banditEnabled": false
+  "python.pythonPath": "C:\\ProgramData\\Anaconda3\\python.exe"
 }
