--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,5 +1,9 @@
 {
-  "python.linting.flake8Enabled": true,
+  "python.linting.flake8Enabled": false,
   "python.linting.enabled": true,
-  "python.pythonPath": "C:\\ProgramData\\Anaconda3\\python.exe"
+  "python.pythonPath": "C:\\ProgramData\\Anaconda3\\python.exe",
+  "python.linting.pylintEnabled": true,
+  "python.linting.pycodestyleEnabled": false,
+  "python.formatting.provider": "black",
+  "python.linting.banditEnabled": false
 }
