--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,10 +1,12 @@
 {
-  "python.linting.flake8Enabled": false,
+  "python.linting.flake8Enabled": true,
   "python.linting.enabled": true,
   "python.pythonPath": "C:\\ProgramData\\Anaconda3\\python.exe",
-  "python.linting.pylintEnabled": true,
+  "python.linting.pylintEnabled": false,
   "python.linting.pycodestyleEnabled": false,
-  "python.formatting.provider": "black",
+  "python.formatting.provider": "yapf",
   "python.linting.banditEnabled": false,
-  "git.ignoreLimitWarning": true
+  "git.ignoreLimitWarning": true,
+  "python.linting.mypyEnabled": false,
+  "python.linting.pylamaEnabled": false
 }
