--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -5,7 +5,7 @@
   "python.linting.pylintEnabled": false,
   "python.linting.pycodestyleEnabled": false,
   "python.formatting.provider": "black",
-  "python.linting.banditEnabled": true,
+  "python.linting.banditEnabled": false,
   "git.ignoreLimitWarning": true,
   "python.linting.mypyEnabled": false,
   "python.linting.pylamaEnabled": false
