--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,11 +1,11 @@
 {
-  "python.linting.flake8Enabled": true,
+  "python.linting.flake8Enabled": false,
   "python.linting.enabled": true,
   "python.pythonPath": "C:\\ProgramData\\Anaconda3\\python.exe",
   "python.linting.pylintEnabled": false,
   "python.linting.pycodestyleEnabled": false,
   "python.formatting.provider": "black",
-  "python.linting.banditEnabled": false,
+  "python.linting.banditEnabled": true,
   "git.ignoreLimitWarning": true,
   "python.linting.mypyEnabled": false,
   "python.linting.pylamaEnabled": false
